parser/src/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    TDASH

Grammar

Rule 0     S' -> chunk
Rule 1     chunk -> chunk stat
Rule 2     chunk -> chunk stat SEMI
Rule 3     chunk -> chunk stat laststat
Rule 4     chunk -> chunk stat SEMI laststat SEMI
Rule 5     chunk -> empty
Rule 6     block -> chunk
Rule 7     stat -> varlist EQUALS explist
Rule 8     stat -> do block end
Rule 9     stat -> while exp do block end
Rule 10    stat -> repeat block until exp
Rule 11    stat -> if exp then block ifblock else block end
Rule 12    stat -> if exp then block ifblock end
Rule 13    stat -> for names EQUALS exp COMMA exp do block end
Rule 14    stat -> for names EQUALS exp COMMA exp COMMA exp do block end
Rule 15    stat -> for namelist in explist do block end
Rule 16    stat -> local namelist
Rule 17    stat -> local namelist EQUALS explist
Rule 18    stat -> function funcname funcbody
Rule 19    stat -> local function names funcbody
Rule 20    funcbody -> LPAREN RPAREN block end
Rule 21    funcbody -> LPAREN parlist RPAREN block end
Rule 22    parlist -> namelist
Rule 23    parlist -> namelist comtrp
Rule 24    parlist -> TRPLDOTS
Rule 25    comtrp -> COMMA TRPLDOTS
Rule 26    laststat -> return explist
Rule 27    laststat -> return
Rule 28    laststat -> break
Rule 29    funcname -> names dotid COLON
Rule 30    funcname -> names dotid
Rule 31    dotid -> SDOT names dotid
Rule 32    dotid -> empty
Rule 33    comvar -> COMMA var comvar
Rule 34    comvar -> empty
Rule 35    comid -> COMMA names comid
Rule 36    comid -> empty
Rule 37    ifblock -> ifblock elseif exp then block
Rule 38    ifblock -> empty
Rule 39    varlist -> var comvar
Rule 40    var -> names
Rule 41    var -> prefixexp LSQUARE exp RSQUARE
Rule 42    var -> prefixexp SDOT names
Rule 43    namelist -> names comid
Rule 44    explist -> explist COMMA exp
Rule 45    explist -> exp
Rule 46    exp -> nil
Rule 47    exp -> false
Rule 48    exp -> true
Rule 49    exp -> Number
Rule 50    exp -> STRING
Rule 51    exp -> TRPLDOTS
Rule 52    exp -> function
Rule 53    exp -> prefixexp
Rule 54    exp -> exp PLUS exp
Rule 55    exp -> exp MINUS exp
Rule 56    exp -> exp TIMES exp
Rule 57    exp -> exp DIVIDE exp
Rule 58    exp -> exp POWER exp
Rule 59    exp -> exp LT exp
Rule 60    exp -> exp LE exp
Rule 61    exp -> exp GT exp
Rule 62    exp -> exp GE exp
Rule 63    exp -> exp NE exp
Rule 64    exp -> exp CHECKEQ exp
Rule 65    exp -> exp and exp
Rule 66    exp -> exp or exp
Rule 67    exp -> exp MODULO exp
Rule 68    exp -> exp DBLDOTS exp
Rule 69    exp -> unop exp
Rule 70    exp -> tableconstructor
Rule 71    Number -> INTEGER
Rule 72    Number -> FLOAT
Rule 73    Number -> HEX
Rule 74    empty -> <empty>
Rule 75    prefixexp -> var
Rule 76    prefixexp -> LPAREN exp RPAREN
Rule 77    unop -> MINUS
Rule 78    unop -> not
Rule 79    unop -> HASH
Rule 80    tableconstructor -> LCURLY fieldlist RCURLY
Rule 81    tableconstructor -> LCURLY RCURLY
Rule 82    fieldlist -> field fieldseplist fieldsep
Rule 83    fieldlist -> field fieldseplist
Rule 84    fieldseplist -> fieldseplist fieldsep field
Rule 85    fieldseplist -> empty
Rule 86    field -> LSQUARE exp RSQUARE EQUALS exp
Rule 87    field -> names EQUALS exp
Rule 88    field -> exp
Rule 89    fieldsep -> COMMA
Rule 90    fieldsep -> SEMI
Rule 91    names -> ID
Rule 92    names -> RESID

Terminals, with rules where they appear

CHECKEQ              : 64
COLON                : 29
COMMA                : 13 14 14 25 33 35 44 89
DBLDOTS              : 68
DIVIDE               : 57
EQUALS               : 7 13 14 17 86 87
FLOAT                : 72
GE                   : 62
GT                   : 61
HASH                 : 79
HEX                  : 73
ID                   : 91
INTEGER              : 71
LCURLY               : 80 81
LE                   : 60
LPAREN               : 20 21 76
LSQUARE              : 41 86
LT                   : 59
MINUS                : 55 77
MODULO               : 67
NE                   : 63
NEWLINE              : 
PLUS                 : 54
POWER                : 58
RCURLY               : 80 81
RESID                : 92
RPAREN               : 20 21 76
RSQUARE              : 41 86
SDOT                 : 31 42
SEMI                 : 2 4 4 90
STRING               : 50
TDASH                : 
TIMES                : 56
TRPLDOTS             : 24 25 51
and                  : 65
break                : 28
do                   : 8 9 13 14 15
else                 : 11
elseif               : 37
end                  : 8 9 11 12 13 14 15 20 21
error                : 
false                : 47
for                  : 13 14 15
function             : 18 19 52
if                   : 11 12
in                   : 15
local                : 16 17 19
nil                  : 46
not                  : 78
or                   : 66
repeat               : 10
return               : 26 27
then                 : 11 12 37
true                 : 48
until                : 10
while                : 9

Nonterminals, with rules where they appear

Number               : 49
block                : 8 9 10 11 11 12 13 14 15 20 21 37
chunk                : 1 2 3 4 6 0
comid                : 35 43
comtrp               : 23
comvar               : 33 39
dotid                : 29 30 31
empty                : 5 32 34 36 38 85
exp                  : 9 10 11 12 13 13 14 14 14 37 41 44 45 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 76 86 86 87 88
explist              : 7 15 17 26 44
field                : 82 83 84
fieldlist            : 80
fieldsep             : 82 84
fieldseplist         : 82 83 84
funcbody             : 18 19
funcname             : 18
ifblock              : 11 12 37
laststat             : 3 4
namelist             : 15 16 17 22 23
names                : 13 14 19 29 30 31 35 40 42 43 87
parlist              : 21
prefixexp            : 41 42 53
stat                 : 1 2 3 4
tableconstructor     : 70
unop                 : 69
var                  : 33 39 75
varlist              : 7

Parsing method: LALR

state 0

    (0) S' -> . chunk
    (1) chunk -> . chunk stat
    (2) chunk -> . chunk stat SEMI
    (3) chunk -> . chunk stat laststat
    (4) chunk -> . chunk stat SEMI laststat SEMI
    (5) chunk -> . empty
    (74) empty -> .

    do              reduce using rule 74 (empty -> .)
    while           reduce using rule 74 (empty -> .)
    repeat          reduce using rule 74 (empty -> .)
    if              reduce using rule 74 (empty -> .)
    for             reduce using rule 74 (empty -> .)
    local           reduce using rule 74 (empty -> .)
    function        reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    RESID           reduce using rule 74 (empty -> .)
    LPAREN          reduce using rule 74 (empty -> .)
    $end            reduce using rule 74 (empty -> .)

    chunk                          shift and go to state 2
    empty                          shift and go to state 1

state 1

    (5) chunk -> empty .

    do              reduce using rule 5 (chunk -> empty .)
    while           reduce using rule 5 (chunk -> empty .)
    repeat          reduce using rule 5 (chunk -> empty .)
    if              reduce using rule 5 (chunk -> empty .)
    for             reduce using rule 5 (chunk -> empty .)
    local           reduce using rule 5 (chunk -> empty .)
    function        reduce using rule 5 (chunk -> empty .)
    ID              reduce using rule 5 (chunk -> empty .)
    RESID           reduce using rule 5 (chunk -> empty .)
    LPAREN          reduce using rule 5 (chunk -> empty .)
    end             reduce using rule 5 (chunk -> empty .)
    else            reduce using rule 5 (chunk -> empty .)
    elseif          reduce using rule 5 (chunk -> empty .)
    $end            reduce using rule 5 (chunk -> empty .)
    until           reduce using rule 5 (chunk -> empty .)


state 2

    (0) S' -> chunk .
    (1) chunk -> chunk . stat
    (2) chunk -> chunk . stat SEMI
    (3) chunk -> chunk . stat laststat
    (4) chunk -> chunk . stat SEMI laststat SEMI
    (7) stat -> . varlist EQUALS explist
    (8) stat -> . do block end
    (9) stat -> . while exp do block end
    (10) stat -> . repeat block until exp
    (11) stat -> . if exp then block ifblock else block end
    (12) stat -> . if exp then block ifblock end
    (13) stat -> . for names EQUALS exp COMMA exp do block end
    (14) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (15) stat -> . for namelist in explist do block end
    (16) stat -> . local namelist
    (17) stat -> . local namelist EQUALS explist
    (18) stat -> . function funcname funcbody
    (19) stat -> . local function names funcbody
    (39) varlist -> . var comvar
    (40) var -> . names
    (41) var -> . prefixexp LSQUARE exp RSQUARE
    (42) var -> . prefixexp SDOT names
    (91) names -> . ID
    (92) names -> . RESID
    (75) prefixexp -> . var
    (76) prefixexp -> . LPAREN exp RPAREN

    do              shift and go to state 13
    while           shift and go to state 17
    repeat          shift and go to state 15
    if              shift and go to state 6
    for             shift and go to state 8
    local           shift and go to state 11
    function        shift and go to state 12
    ID              shift and go to state 16
    RESID           shift and go to state 3
    LPAREN          shift and go to state 4

    prefixexp                      shift and go to state 7
    stat                           shift and go to state 14
    varlist                        shift and go to state 9
    names                          shift and go to state 5
    var                            shift and go to state 10

state 3

    (92) names -> RESID .

    LSQUARE         reduce using rule 92 (names -> RESID .)
    SDOT            reduce using rule 92 (names -> RESID .)
    PLUS            reduce using rule 92 (names -> RESID .)
    MINUS           reduce using rule 92 (names -> RESID .)
    TIMES           reduce using rule 92 (names -> RESID .)
    DIVIDE          reduce using rule 92 (names -> RESID .)
    POWER           reduce using rule 92 (names -> RESID .)
    LT              reduce using rule 92 (names -> RESID .)
    LE              reduce using rule 92 (names -> RESID .)
    GT              reduce using rule 92 (names -> RESID .)
    GE              reduce using rule 92 (names -> RESID .)
    NE              reduce using rule 92 (names -> RESID .)
    CHECKEQ         reduce using rule 92 (names -> RESID .)
    and             reduce using rule 92 (names -> RESID .)
    or              reduce using rule 92 (names -> RESID .)
    MODULO          reduce using rule 92 (names -> RESID .)
    DBLDOTS         reduce using rule 92 (names -> RESID .)
    RPAREN          reduce using rule 92 (names -> RESID .)
    then            reduce using rule 92 (names -> RESID .)
    do              reduce using rule 92 (names -> RESID .)
    COMMA           reduce using rule 92 (names -> RESID .)
    SEMI            reduce using rule 92 (names -> RESID .)
    RCURLY          reduce using rule 92 (names -> RESID .)
    RSQUARE         reduce using rule 92 (names -> RESID .)
    return          reduce using rule 92 (names -> RESID .)
    break           reduce using rule 92 (names -> RESID .)
    while           reduce using rule 92 (names -> RESID .)
    repeat          reduce using rule 92 (names -> RESID .)
    if              reduce using rule 92 (names -> RESID .)
    for             reduce using rule 92 (names -> RESID .)
    local           reduce using rule 92 (names -> RESID .)
    function        reduce using rule 92 (names -> RESID .)
    ID              reduce using rule 92 (names -> RESID .)
    RESID           reduce using rule 92 (names -> RESID .)
    LPAREN          reduce using rule 92 (names -> RESID .)
    $end            reduce using rule 92 (names -> RESID .)
    end             reduce using rule 92 (names -> RESID .)
    until           reduce using rule 92 (names -> RESID .)
    else            reduce using rule 92 (names -> RESID .)
    elseif          reduce using rule 92 (names -> RESID .)
    EQUALS          reduce using rule 92 (names -> RESID .)
    COLON           reduce using rule 92 (names -> RESID .)
    in              reduce using rule 92 (names -> RESID .)


state 4

    (76) prefixexp -> LPAREN . exp RPAREN
    (46) exp -> . nil
    (47) exp -> . false
    (48) exp -> . true
    (49) exp -> . Number
    (50) exp -> . STRING
    (51) exp -> . TRPLDOTS
    (52) exp -> . function
    (53) exp -> . prefixexp
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp POWER exp
    (59) exp -> . exp LT exp
    (60) exp -> . exp LE exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp GE exp
    (63) exp -> . exp NE exp
    (64) exp -> . exp CHECKEQ exp
    (65) exp -> . exp and exp
    (66) exp -> . exp or exp
    (67) exp -> . exp MODULO exp
    (68) exp -> . exp DBLDOTS exp
    (69) exp -> . unop exp
    (70) exp -> . tableconstructor
    (71) Number -> . INTEGER
    (72) Number -> . FLOAT
    (73) Number -> . HEX
    (75) prefixexp -> . var
    (76) prefixexp -> . LPAREN exp RPAREN
    (77) unop -> . MINUS
    (78) unop -> . not
    (79) unop -> . HASH
    (80) tableconstructor -> . LCURLY fieldlist RCURLY
    (81) tableconstructor -> . LCURLY RCURLY
    (40) var -> . names
    (41) var -> . prefixexp LSQUARE exp RSQUARE
    (42) var -> . prefixexp SDOT names
    (91) names -> . ID
    (92) names -> . RESID

    nil             shift and go to state 29
    false           shift and go to state 20
    true            shift and go to state 32
    STRING          shift and go to state 24
    TRPLDOTS        shift and go to state 36
    function        shift and go to state 28
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 33
    HEX             shift and go to state 30
    LPAREN          shift and go to state 4
    MINUS           shift and go to state 23
    not             shift and go to state 31
    HASH            shift and go to state 22
    LCURLY          shift and go to state 21
    ID              shift and go to state 16
    RESID           shift and go to state 3

    prefixexp                      shift and go to state 25
    unop                           shift and go to state 18
    tableconstructor               shift and go to state 19
    Number                         shift and go to state 34
    exp                            shift and go to state 35
    var                            shift and go to state 26
    names                          shift and go to state 5

state 5

    (40) var -> names .

    LSQUARE         reduce using rule 40 (var -> names .)
    SDOT            reduce using rule 40 (var -> names .)
    PLUS            reduce using rule 40 (var -> names .)
    MINUS           reduce using rule 40 (var -> names .)
    TIMES           reduce using rule 40 (var -> names .)
    DIVIDE          reduce using rule 40 (var -> names .)
    POWER           reduce using rule 40 (var -> names .)
    LT              reduce using rule 40 (var -> names .)
    LE              reduce using rule 40 (var -> names .)
    GT              reduce using rule 40 (var -> names .)
    GE              reduce using rule 40 (var -> names .)
    NE              reduce using rule 40 (var -> names .)
    CHECKEQ         reduce using rule 40 (var -> names .)
    and             reduce using rule 40 (var -> names .)
    or              reduce using rule 40 (var -> names .)
    MODULO          reduce using rule 40 (var -> names .)
    DBLDOTS         reduce using rule 40 (var -> names .)
    SEMI            reduce using rule 40 (var -> names .)
    return          reduce using rule 40 (var -> names .)
    break           reduce using rule 40 (var -> names .)
    do              reduce using rule 40 (var -> names .)
    while           reduce using rule 40 (var -> names .)
    repeat          reduce using rule 40 (var -> names .)
    if              reduce using rule 40 (var -> names .)
    for             reduce using rule 40 (var -> names .)
    local           reduce using rule 40 (var -> names .)
    function        reduce using rule 40 (var -> names .)
    ID              reduce using rule 40 (var -> names .)
    RESID           reduce using rule 40 (var -> names .)
    LPAREN          reduce using rule 40 (var -> names .)
    $end            reduce using rule 40 (var -> names .)
    end             reduce using rule 40 (var -> names .)
    until           reduce using rule 40 (var -> names .)
    else            reduce using rule 40 (var -> names .)
    elseif          reduce using rule 40 (var -> names .)
    COMMA           reduce using rule 40 (var -> names .)
    EQUALS          reduce using rule 40 (var -> names .)
    RPAREN          reduce using rule 40 (var -> names .)
    then            reduce using rule 40 (var -> names .)
    RCURLY          reduce using rule 40 (var -> names .)
    RSQUARE         reduce using rule 40 (var -> names .)


state 6

    (11) stat -> if . exp then block ifblock else block end
    (12) stat -> if . exp then block ifblock end
    (46) exp -> . nil
    (47) exp -> . false
    (48) exp -> . true
    (49) exp -> . Number
    (50) exp -> . STRING
    (51) exp -> . TRPLDOTS
    (52) exp -> . function
    (53) exp -> . prefixexp
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp POWER exp
    (59) exp -> . exp LT exp
    (60) exp -> . exp LE exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp GE exp
    (63) exp -> . exp NE exp
    (64) exp -> . exp CHECKEQ exp
    (65) exp -> . exp and exp
    (66) exp -> . exp or exp
    (67) exp -> . exp MODULO exp
    (68) exp -> . exp DBLDOTS exp
    (69) exp -> . unop exp
    (70) exp -> . tableconstructor
    (71) Number -> . INTEGER
    (72) Number -> . FLOAT
    (73) Number -> . HEX
    (75) prefixexp -> . var
    (76) prefixexp -> . LPAREN exp RPAREN
    (77) unop -> . MINUS
    (78) unop -> . not
    (79) unop -> . HASH
    (80) tableconstructor -> . LCURLY fieldlist RCURLY
    (81) tableconstructor -> . LCURLY RCURLY
    (40) var -> . names
    (41) var -> . prefixexp LSQUARE exp RSQUARE
    (42) var -> . prefixexp SDOT names
    (91) names -> . ID
    (92) names -> . RESID

    nil             shift and go to state 29
    false           shift and go to state 20
    true            shift and go to state 32
    STRING          shift and go to state 24
    TRPLDOTS        shift and go to state 36
    function        shift and go to state 28
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 33
    HEX             shift and go to state 30
    LPAREN          shift and go to state 4
    MINUS           shift and go to state 23
    not             shift and go to state 31
    HASH            shift and go to state 22
    LCURLY          shift and go to state 21
    ID              shift and go to state 16
    RESID           shift and go to state 3

    prefixexp                      shift and go to state 25
    unop                           shift and go to state 18
    tableconstructor               shift and go to state 19
    Number                         shift and go to state 34
    exp                            shift and go to state 37
    var                            shift and go to state 26
    names                          shift and go to state 5

state 7

    (41) var -> prefixexp . LSQUARE exp RSQUARE
    (42) var -> prefixexp . SDOT names

    LSQUARE         shift and go to state 38
    SDOT            shift and go to state 39


state 8

    (13) stat -> for . names EQUALS exp COMMA exp do block end
    (14) stat -> for . names EQUALS exp COMMA exp COMMA exp do block end
    (15) stat -> for . namelist in explist do block end
    (91) names -> . ID
    (92) names -> . RESID
    (43) namelist -> . names comid

    ID              shift and go to state 16
    RESID           shift and go to state 3

    namelist                       shift and go to state 40
    names                          shift and go to state 41

state 9

    (7) stat -> varlist . EQUALS explist

    EQUALS          shift and go to state 42


state 10

    (39) varlist -> var . comvar
    (75) prefixexp -> var .
    (33) comvar -> . COMMA var comvar
    (34) comvar -> . empty
    (74) empty -> .

    LSQUARE         reduce using rule 75 (prefixexp -> var .)
    SDOT            reduce using rule 75 (prefixexp -> var .)
    COMMA           shift and go to state 43
    EQUALS          reduce using rule 74 (empty -> .)

    comvar                         shift and go to state 44
    empty                          shift and go to state 45

state 11

    (16) stat -> local . namelist
    (17) stat -> local . namelist EQUALS explist
    (19) stat -> local . function names funcbody
    (43) namelist -> . names comid
    (91) names -> . ID
    (92) names -> . RESID

    function        shift and go to state 46
    ID              shift and go to state 16
    RESID           shift and go to state 3

    namelist                       shift and go to state 47
    names                          shift and go to state 48

state 12

    (18) stat -> function . funcname funcbody
    (29) funcname -> . names dotid COLON
    (30) funcname -> . names dotid
    (91) names -> . ID
    (92) names -> . RESID

    ID              shift and go to state 16
    RESID           shift and go to state 3

    names                          shift and go to state 50
    funcname                       shift and go to state 49

state 13

    (8) stat -> do . block end
    (6) block -> . chunk
    (1) chunk -> . chunk stat
    (2) chunk -> . chunk stat SEMI
    (3) chunk -> . chunk stat laststat
    (4) chunk -> . chunk stat SEMI laststat SEMI
    (5) chunk -> . empty
    (74) empty -> .

    do              reduce using rule 74 (empty -> .)
    while           reduce using rule 74 (empty -> .)
    repeat          reduce using rule 74 (empty -> .)
    if              reduce using rule 74 (empty -> .)
    for             reduce using rule 74 (empty -> .)
    local           reduce using rule 74 (empty -> .)
    function        reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    RESID           reduce using rule 74 (empty -> .)
    LPAREN          reduce using rule 74 (empty -> .)
    end             reduce using rule 74 (empty -> .)

    empty                          shift and go to state 1
    chunk                          shift and go to state 51
    block                          shift and go to state 52

state 14

    (1) chunk -> chunk stat .
    (2) chunk -> chunk stat . SEMI
    (3) chunk -> chunk stat . laststat
    (4) chunk -> chunk stat . SEMI laststat SEMI
    (26) laststat -> . return explist
    (27) laststat -> . return
    (28) laststat -> . break

    do              reduce using rule 1 (chunk -> chunk stat .)
    while           reduce using rule 1 (chunk -> chunk stat .)
    repeat          reduce using rule 1 (chunk -> chunk stat .)
    if              reduce using rule 1 (chunk -> chunk stat .)
    for             reduce using rule 1 (chunk -> chunk stat .)
    local           reduce using rule 1 (chunk -> chunk stat .)
    function        reduce using rule 1 (chunk -> chunk stat .)
    ID              reduce using rule 1 (chunk -> chunk stat .)
    RESID           reduce using rule 1 (chunk -> chunk stat .)
    LPAREN          reduce using rule 1 (chunk -> chunk stat .)
    end             reduce using rule 1 (chunk -> chunk stat .)
    else            reduce using rule 1 (chunk -> chunk stat .)
    elseif          reduce using rule 1 (chunk -> chunk stat .)
    $end            reduce using rule 1 (chunk -> chunk stat .)
    until           reduce using rule 1 (chunk -> chunk stat .)
    SEMI            shift and go to state 54
    return          shift and go to state 53
    break           shift and go to state 56

    laststat                       shift and go to state 55

state 15

    (10) stat -> repeat . block until exp
    (6) block -> . chunk
    (1) chunk -> . chunk stat
    (2) chunk -> . chunk stat SEMI
    (3) chunk -> . chunk stat laststat
    (4) chunk -> . chunk stat SEMI laststat SEMI
    (5) chunk -> . empty
    (74) empty -> .

    do              reduce using rule 74 (empty -> .)
    while           reduce using rule 74 (empty -> .)
    repeat          reduce using rule 74 (empty -> .)
    if              reduce using rule 74 (empty -> .)
    for             reduce using rule 74 (empty -> .)
    local           reduce using rule 74 (empty -> .)
    function        reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    RESID           reduce using rule 74 (empty -> .)
    LPAREN          reduce using rule 74 (empty -> .)
    until           reduce using rule 74 (empty -> .)

    chunk                          shift and go to state 51
    empty                          shift and go to state 1
    block                          shift and go to state 57

state 16

    (91) names -> ID .

    LSQUARE         reduce using rule 91 (names -> ID .)
    SDOT            reduce using rule 91 (names -> ID .)
    PLUS            reduce using rule 91 (names -> ID .)
    MINUS           reduce using rule 91 (names -> ID .)
    TIMES           reduce using rule 91 (names -> ID .)
    DIVIDE          reduce using rule 91 (names -> ID .)
    POWER           reduce using rule 91 (names -> ID .)
    LT              reduce using rule 91 (names -> ID .)
    LE              reduce using rule 91 (names -> ID .)
    GT              reduce using rule 91 (names -> ID .)
    GE              reduce using rule 91 (names -> ID .)
    NE              reduce using rule 91 (names -> ID .)
    CHECKEQ         reduce using rule 91 (names -> ID .)
    and             reduce using rule 91 (names -> ID .)
    or              reduce using rule 91 (names -> ID .)
    MODULO          reduce using rule 91 (names -> ID .)
    DBLDOTS         reduce using rule 91 (names -> ID .)
    RPAREN          reduce using rule 91 (names -> ID .)
    then            reduce using rule 91 (names -> ID .)
    do              reduce using rule 91 (names -> ID .)
    COMMA           reduce using rule 91 (names -> ID .)
    SEMI            reduce using rule 91 (names -> ID .)
    RCURLY          reduce using rule 91 (names -> ID .)
    RSQUARE         reduce using rule 91 (names -> ID .)
    return          reduce using rule 91 (names -> ID .)
    break           reduce using rule 91 (names -> ID .)
    while           reduce using rule 91 (names -> ID .)
    repeat          reduce using rule 91 (names -> ID .)
    if              reduce using rule 91 (names -> ID .)
    for             reduce using rule 91 (names -> ID .)
    local           reduce using rule 91 (names -> ID .)
    function        reduce using rule 91 (names -> ID .)
    ID              reduce using rule 91 (names -> ID .)
    RESID           reduce using rule 91 (names -> ID .)
    LPAREN          reduce using rule 91 (names -> ID .)
    $end            reduce using rule 91 (names -> ID .)
    end             reduce using rule 91 (names -> ID .)
    until           reduce using rule 91 (names -> ID .)
    else            reduce using rule 91 (names -> ID .)
    elseif          reduce using rule 91 (names -> ID .)
    EQUALS          reduce using rule 91 (names -> ID .)
    COLON           reduce using rule 91 (names -> ID .)
    in              reduce using rule 91 (names -> ID .)


state 17

    (9) stat -> while . exp do block end
    (46) exp -> . nil
    (47) exp -> . false
    (48) exp -> . true
    (49) exp -> . Number
    (50) exp -> . STRING
    (51) exp -> . TRPLDOTS
    (52) exp -> . function
    (53) exp -> . prefixexp
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp POWER exp
    (59) exp -> . exp LT exp
    (60) exp -> . exp LE exp
    (61) exp -> . exp GT exp
    (62) exp -> . exp GE exp
    (63) exp -> . exp NE exp
    (64) exp -> . exp CHECKEQ exp
    (65) exp -> . exp and exp
    (66) exp -> . exp or exp
    (67) exp -> . exp MODULO exp
    (68) exp -> . exp DBLDOTS exp
    (69) exp -> . unop exp
    (70) exp -> . tableconstructor
    (71) Number -> . INTEGER
    (72) Number -> . FLOAT
    (73) Number -> . HEX
    (75) prefixexp -> . var
    (76) prefixexp -> . LPAREN exp RPAREN
    (77) unop -> . MINUS
    (78) unop -> . not
    (79) unop -> . HASH
    (80) tableconstructor -> . LCURLY fieldlist RCURLY
    (81) tableconstructor -> . LCURLY RCURLY
    (40) var -> . names
    (41) var -> . prefixexp LSQUARE exp RSQUARE
    (42) var -> . prefixexp SDOT names
    (91) names -> . ID
    (92) names -> . RESID

    nil             shift and go to state 29
    false           shift and go to state 20
    true            shift and go to state 32
    STRING          shift and go to state 24
    TRPLDOTS        shift and go to state 36
    function        shift and go to state 28
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 33
    HEX             shift and go to state 30
    LPAREN          shift and go to state 4
    MINUS           shift and go to state 23
    not             shift and go to state 31
    HASH            shift and go to state 22
    LCURLY          shift and go to state 21
    ID              shift and go to state 16
    RESID           shift and go to state 3

    prefixexp                      shift and go to state 25
    unop                           shift and go to state 18
    tableconstructor               shift and go to state 19
    Number                         shift and go to state 34
    exp                            shift and go to state 58
    var                            shift and go to state 26
    names                          shift and go to state 5

state 18
